--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -34,25 +34,69 @@ nav {
   -ms-grid-columns: 5% 10% 70% 10% 5%;
       grid-template-columns: 5% 10% 70% 10% 5%;
   height: 100px;
-  background-color: #fcfcfc;
-}
-
-nav h1 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2 / 3;
-}
-
-nav a {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
+  background-color: #f2f2f2;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+
+nav .logo {
+  height: 100%;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  place-self: center;
+  font-size: 1rem;
+}
+
+nav .menu {
+  height: 100%;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-grid-row-align: center;
+      align-self: center;
+  justify-items: center;
+  /*nested grid*/
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 25% 25% 25% 25%;
+      grid-template-columns: 25% 25% 25% 25%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+nav .menu a {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+nav .menu-trigger {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  place-self: center;
+}
+
+nav .menu-trigger .bar {
+  display: block;
+  background-color: #000000;
+  width: 50px;
+  height: 5px;
+  margin-top: 5px;
 }
 
 div.main {
