--- a/frontend/style/style.sass
+++ b/frontend/style/style.sass
@@ -132,6 +132,9 @@ nav
         
         .menu
             display: none
+            
+        .menu-show
+            display: block
             grid-column: 1 / 5
             grid-row: 2
             grid-template-columns: 100%
@@ -145,7 +148,6 @@ nav
                 padding-bottom: 0.5rem
                 text-align: center
                 align-self: center
-            
 
 
     #main
