navbar styling, rwd menu toggle

--- a/frontend/style/style.sass
+++ b/frontend/style/style.sass
@@ -14,42 +14,27 @@ nav
     height: 100px
     background-color: $navbar-color
     column-gap: 1rem    
-    justify-content: space-evenly
-
+    
     .logo
-        height: 100%
         grid-column: 2 / 3
-        // background-color: green
+        font-size: 2rem
         align-self: center
-        place-self: center
-        font-size: 1rem
-        
+        font-weight: 800
     .menu
         
         height: 100%
         grid-column: 3 / 4
         grid-row: 1 / 2
         
-        align-self: center
-        // background-color: lightblue 
-
-        justify-items: center
-        
         /*nested grid*/
         display: grid
-        grid-template-columns: 25% 25% 25% 25%
-        justify-content: space-evenly
-        align-items: center
+        grid-template-columns: repeat(4, 1fr)
 
         a
-            display: block
-            height: 100%
-            width: 100%
-            text-align: center
             align-self: center
-
-        a:hover 
-                background-color: red
+            text-align: center
+            font-size: 1.5rem
+            text-transform: uppercase
         
     .menu-trigger
         grid-column: 4 / 5
@@ -61,8 +46,8 @@ nav
             width: 100%
             background-color: #000000
             width: 50px
-            height: 5px
-            margin-top: 5px
+            height: 7px
+            margin-bottom: 7px
 
 
 #main
@@ -130,24 +115,27 @@ nav
             grid-column: 3 / 4
             grid-row: 1
         
+        
         .menu
             display: none
             
         .menu-show
+            z-index: 100
             display: block
             grid-column: 1 / 5
             grid-row: 2
             grid-template-columns: 100%
+            padding-bottom: 0.5rem
+            transform: 
             a
-                z-index: 100
+                align-self: center
                 background-color: $navbar-color
                 display: block
                 width: 100vw
-                height: 2rem
+                font-size: 1.7rem
+                
                 padding-top: 0.5rem
                 padding-bottom: 0.5rem
-                text-align: center
-                align-self: center
 
 
     #main
