--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -37,21 +37,17 @@ nav {
   background-color: #f2f2f2;
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
 }
 
 nav .logo {
-  height: 100%;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  font-size: 2rem;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  place-self: center;
-  font-size: 1rem;
+  font-weight: 800;
 }
 
 nav .menu {
@@ -62,34 +58,20 @@ nav .menu {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / 2;
-  -ms-grid-row-align: center;
-      align-self: center;
-  justify-items: center;
   /*nested grid*/
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 25% 25% 25% 25%;
-      grid-template-columns: 25% 25% 25% 25%;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
 }
 
 nav .menu a {
-  display: block;
-  height: 100%;
-  width: 100%;
-  text-align: center;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-}
-
-nav .menu a:hover {
-  background-color: red;
+  text-align: center;
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
 
 nav .menu-trigger {
@@ -105,8 +87,8 @@ nav .menu-trigger .bar {
   width: 100%;
   background-color: #000000;
   width: 50px;
-  height: 5px;
-  margin-top: 5px;
+  height: 7px;
+  margin-bottom: 7px;
 }
 
 #main {
@@ -201,6 +183,7 @@ nav .menu-trigger .bar {
     display: none;
   }
   nav .menu-show {
+    z-index: 100;
     display: block;
     -ms-grid-column: 1;
     -ms-grid-column-span: 4;
@@ -209,19 +192,18 @@ nav .menu-trigger .bar {
     grid-row: 2;
     -ms-grid-columns: 100%;
         grid-template-columns: 100%;
+    padding-bottom: 0.5rem;
   }
   nav .menu-show a {
-    z-index: 100;
-    background-color: #f2f2f2;
-    display: block;
-    width: 100vw;
-    height: 2rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    text-align: center;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
+    background-color: #f2f2f2;
+    display: block;
+    width: 100vw;
+    font-size: 1.7rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
   #main {
     width: 100%;
