--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -31,19 +31,20 @@ nav {
   display: -ms-grid;
   display: grid;
   width: 100%;
-  -ms-grid-columns: 5% 10% 70% 10% 5%;
-      grid-template-columns: 5% 10% 70% 10% 5%;
-  height: 100px;
-  background-color: #f2f2f2;
+  -ms-grid-columns: 5% 15% 65% 10% 5%;
+      grid-template-columns: 5% 15% 65% 10% 5%;
+  height: 70px;
+  background-color: #363636;
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
+  color: #ffffff;
 }
 
 nav .logo {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
-  font-size: 2rem;
+  font-size: 1.7rem;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -66,12 +67,21 @@ nav .menu {
 }
 
 nav .menu a {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  place-self: stretch;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
+  padding-top: 1.4rem;
+  color: #ffffff;
+  vertical-align: center;
+  -webkit-transition: background-color .3s ease-in-out;
+  transition: background-color .3s ease-in-out;
+}
+
+nav .menu a:hover {
+  background-color: #3c3c3c;
 }
 
 nav .menu-trigger {
@@ -85,10 +95,14 @@ nav .menu-trigger {
 nav .menu-trigger .bar {
   display: block;
   width: 100%;
-  background-color: #000000;
+  background-color: #ffffff;
   width: 50px;
   height: 7px;
-  margin-bottom: 7px;
+  margin-bottom: 9px;
+  -webkit-transition: -webkit-transform .3s ease-in-out;
+  transition: -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out;
+  transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
 }
 
 #main {
@@ -105,9 +119,14 @@ nav .menu-trigger .bar {
   grid-column: 2 / 3;
 }
 
+#main .post span.date::after, #main .post span.author::after {
+  content: ' - ';
+}
+
 #main .post span.date, #main .post span.author, #main .post span.category {
   display: inline-block;
   margin-left: 1%;
+  margin-bottom: 8px;
 }
 
 #main .post .main h1 {
@@ -154,6 +173,19 @@ nav .menu-trigger .bar {
   font-size: 22px;
 }
 
+#main .post:first-of-type .title {
+  margin-top: 2.5rem;
+}
+
+#main .post-link {
+  margin-top: 8px;
+  padding: 10px;
+  border: 0;
+  background-color: #28a745;
+  color: #ffffff;
+  font-size: 20px;
+}
+
 @media screen and (max-width: 1000px) {
   nav {
     display: -ms-grid;
@@ -179,6 +211,33 @@ nav .menu-trigger .bar {
     -ms-grid-row: 1;
     grid-row: 1;
   }
+  nav .menu-trigger-acitve .bar:first-of-type {
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    -webkit-transition: -webkit-transform .3s ease-in-out;
+    transition: -webkit-transform .3s ease-in-out;
+    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  }
+  nav .menu-trigger-acitve .bar:nth-of-type(2) {
+    opacity: 0;
+    -webkit-transition: -webkit-transform .3s ease-in-out;
+    transition: -webkit-transform .3s ease-in-out;
+    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  }
+  nav .menu-trigger-acitve .bar:last-of-type {
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    -webkit-transition: -webkit-transform .3s ease-in-out;
+    transition: -webkit-transform .3s ease-in-out;
+    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+  }
   nav .menu {
     display: none;
   }
@@ -198,7 +257,7 @@ nav .menu-trigger .bar {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    background-color: #f2f2f2;
+    background-color: #363636;
     display: block;
     width: 100vw;
     font-size: 1.7rem;
