--- a/frontend/style/style.sass
+++ b/frontend/style/style.sass
@@ -1,8 +1,9 @@
 @import font-defs
 
 $break-point: 1000px
-$navbar-color: #f2f2f2
-    
+$navbar-color: #363636
+$navbar-font-color: #ffffff
+
 html, body
     font-family: 'Overpass', sans-serif
     margin: 0
@@ -10,18 +11,19 @@ html, body
 nav
     display: grid
     width: 100%
-    grid-template-columns: 5% 10% 70% 10% 5%
-    height: 100px
+    grid-template-columns: 5% 15% 65% 10% 5%
+    height: 70px
     background-color: $navbar-color
     column-gap: 1rem    
+    color: $navbar-font-color
     
     .logo
         grid-column: 2 / 3
-        font-size: 2rem
+        font-size: 1.7rem
         align-self: center
         font-weight: 800
-    .menu
         
+    .menu
         height: 100%
         grid-column: 3 / 4
         grid-row: 1 / 2
@@ -31,23 +33,31 @@ nav
         grid-template-columns: repeat(4, 1fr)
 
         a
-            align-self: center
+            //align-self: center
+            box-sizing: border-box
+            place-self: stretch
             text-align: center
-            font-size: 1.5rem
+            font-size: 1.2rem
             text-transform: uppercase
+            padding-top: 1.4rem
+            color: $navbar-font-color
+            vertical-align: center
+            transition: background-color .3s ease-in-out
+        a:hover 
+            background-color: lighten($navbar-color, 2.3)
         
     .menu-trigger
         grid-column: 4 / 5
-        // place-self: center
         place-self: center
         display: none
         .bar
             display: block
             width: 100%
-            background-color: #000000
+            background-color: $navbar-font-color
             width: 50px
             height: 7px
-            margin-bottom: 7px
+            margin-bottom: 9px
+            transition: transform .3s ease-in-out
 
 
 #main
@@ -56,16 +66,26 @@ nav
     grid-template-columns: 25vw 50vw 25vw
     .post
         grid-column: 2 / 3
+
         
+        span.date::after, span.author::after
+            content: ' - '
+
         span.date, span.author, span.category
             display: inline-block
             margin-left: 1%
+            margin-bottom: 8px
+
+
+        
         .main
             h1
                 font-weight: 800
                 font-family: 'Overpass', sans-serif
                 font-size: 32px
                 color: #333
+
+
             h4
                 font-family: 'Overpass', sans-serif
                 font-color: lightgrey
@@ -96,7 +116,16 @@ nav
                 display: block
                 font-style: bold
                 font-size: 22px
-    
+    .post:first-of-type
+        .title
+            margin-top: 2.5rem
+    .post-link
+        margin-top: 8px
+        padding: 10px
+        border: 0
+        background-color: #28a745
+        color: #ffffff
+        font-size: 20px
 
 @media screen and (max-width: $break-point)
 
@@ -114,6 +143,23 @@ nav
             display: block
             grid-column: 3 / 4
             grid-row: 1
+
+        .menu-trigger-acitve
+            
+            
+            .bar:first-of-type
+                transform-origin: left
+                transform: rotate(45deg)
+                transition: transform .3s ease-in-out 
+
+            .bar:nth-of-type(2)
+                opacity: 0
+                transition: transform .3s ease-in-out
+            
+            .bar:last-of-type
+                transform-origin: left 
+                transform: rotate(-45deg) 
+                transition: transform .3s ease-in-out
         
         
         .menu
@@ -126,7 +172,6 @@ nav
             grid-row: 2
             grid-template-columns: 100%
             padding-bottom: 0.5rem
-            transform: 
             a
                 align-self: center
                 background-color: $navbar-color
